done with self section

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="w-10/12 mx-auto px-0 my-10 lg:my-16">
                 <!-- text section  -->
                 <div class="text-center space-y-6 py-10 mb-10">
-                    <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#494949] w-5 h-5 flex justify-center items-center"></i> Explore our Latest works</a>
+                    <a class="btn bg-[#ABEF5F33] text-black font-bold text-sm md:text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right rounded-full bg-transparent text-[#494949] text-sm md:text-xl w-5 h-5 flex justify-center items-center"></i> Explore our Latest works</a>
                     <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Our Latest Portfolio</h1>
                     <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
                 </div>
@@ -297,7 +297,7 @@
         <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
             <!-- text section  -->
             <div class="text-center space-y-6 py-10 mb-10">
-                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#494949] w-5 h-5 flex justify-center items-center"></i>Rinterio News</a>
+                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#ABEF5F33] w-5 h-5 flex justify-center items-center"></i>Rinterio News</a>
                 <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Read Our Articles and News</h1>
                 <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
             </div>
@@ -314,7 +314,7 @@
                                     <i class="fa-solid fa-calendar-days w-5 h-5"></i>
                                     <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
                                 </div>
-                                <div class="flex items-center text-center">
+                                <div class="flex items-center text-center gap-1">
                                     <i class="fa-solid fa-user-tie w-5 h-5"></i>
                                     <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
                                 </div>
@@ -340,7 +340,7 @@
                                 <i class="fa-solid fa-calendar-days w-5 h-5"></i>
                                 <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
                             </div>
-                            <div class="flex items-center text-center">
+                            <div class="flex items-center text-center gap-1">
                                 <i class="fa-solid fa-user-tie w-5 h-5"></i>
                                 <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
                             </div>
@@ -366,7 +366,7 @@
                                 <i class="fa-solid fa-calendar-days w-5 h-5"></i>
                                 <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
                             </div>
-                            <div class="flex items-center text-center">
+                            <div class="flex items-center text-center gap-1">
                                 <i class="fa-solid fa-user-tie w-5 h-5"></i>
                                 <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
                             </div>
@@ -383,6 +383,116 @@
             </div>
         </div>
         <!-- read our article and news ends  -->
+        <!-- self section starts -->
+        <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
+            <!-- text section  -->
+            <div class="text-center space-y-6 py-10 mb-10">
+                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"><i class="fa-solid fa-arrow-right"></i> Our Packages</a>
+                <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Know about Our Packages and Projects</h1>
+                <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- card section  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-16 xl:gap-20">
+                <!-- 1st card -->
+                <div class="flex flex-col justify-center items-center border-2 rounded-xl bg-white py-4 px-2">
+                    <div class="mb-4 border-2 lg:border-dashed lg:border-stone-400 w-326 h-180">
+                        <img src="my own side/basic.jpeg" alt="" class="w-full rounded-lg">
+                    </div>
+                    <div class="text-justify px-4 space-y-3">
+                        <h1 class="text-black font-extrabold text-lg md:text-xl lg:text-2xl">Basic Package: </h1>
+                        <p class="font-medium text-[#737373] text-base">Target Audience: Homeowners looking for standard house designs or minor customization.</p>
+                        <h3 class="text-black font-extrabold text-lg lg:text-xl">Features:</h3>
+                        <ul class="list-disc font-medium text-[#737373] text-base">
+                            <li>Pre-designed house plans</li>
+                            <li>Basic customization options (e.g., room layout, facade color)</li>
+                            <li>Simple 3D visualization of the design</li>
+                            <li>Basic project consultation (1-2 hours)</li>
+                            <li>Access to a gallery of existing designs</li>
+                            <li>Downloadable PDF of the house plan</li>
+                        </ul>
+                        <p class="font-medium text-[#737373] text-base"><span class="font-bold text-black">Price Range:</span> $500- $2,000</p>
+                    </div>
+                </div>
+                <!-- 2nd card  -->
+                <div class="flex flex-col justify-center items-center border-2 rounded-xl bg-white py-4 px-2">
+                    <div class="mb-4 border-2 lg:border-dashed lg:border-stone-400 w-326 h-180">
+                        <img src="my own side/standard.jpeg" alt="" class="w-full rounded-lg">
+                    </div>
+                    <div class="text-justify px-4 space-y-3">
+                        <h1 class="text-black font-extrabold text-lg md:text-xl lg:text-2xl">Standard Package: </h1>
+                        <p class="font-medium text-[#737373] text-base">Target Audience: Clients looking for a more personalized design with moderate customization.</p>
+                        <h3 class="text-black font-extrabold text-lg lg:text-xl">Features:</h3>
+                        <ul class="list-disc font-medium text-[#737373] text-base">
+                            <li>Semi-customizable house plans</li>
+                            <li>Detailed 3D visualization and rendering</li>
+                            <li>Initial site analysis (e.g., layout compatibility)</li>
+                            <li>Consultation with an architect or designer (up to 5 hours)</li>
+                            <li>Material selection guidance</li>
+                            <li>Budget estimation for the design</li>
+                            <li>Access to an expanded gallery of design ideas</li>
+                        </ul>
+                        <p class="font-medium text-[#737373] text-base"><span class="font-bold text-black">Price Range:</span> $2,000- $5,000</p>
+                    </div>
+                </div>
+                <!-- 3rd card  -->
+                <div class="flex flex-col justify-center items-center border-2 rounded-xl bg-white py-4 px-2">
+                    <div class="mb-4 border-2 lg:border-dashed lg:border-stone-400 w-326 h-180">
+                        <img src="my own side/premium.jpg" alt="" class="w-full rounded-lg">
+                    </div>
+                    <div class="text-justify px-4 space-y-3">
+                        <h1 class="text-black font-extrabold text-lg md:text-xl lg:text-2xl">Premium Package: </h1>
+                        <p class="font-medium text-[#737373] text-base">Target Audience: Clients seeking a fully customized house design tailored to their specific needs.</p>
+                        <h3 class="text-black font-extrabold text-lg lg:text-xl">Features:</h3>
+                        <ul class="list-disc font-medium text-[#737373] text-base">
+                            <li>Fully custom house design from scratch</li>
+                            <li>In-depth consultation (up to 10 hours) with architects and designers</li>
+                            <li>Comprehensive site analysis and compatibility report</li>
+                            <li>High-definition 3D rendering and virtual walkthroughs</li>
+                            <li>Unlimited revisions to the design</li>
+                            <li>Interior design consultation and planning</li>
+                            <li>Sustainable design options (e.g., eco-friendly materials, energy-efficient layouts)</li>
+                            <li>Construction-ready blueprints and documents</li>
+                            <li>Collaboration with contractors and engineers</li>
+                        </ul>
+                        <p class="font-medium text-[#737373] text-base"><span class="font-bold text-black">Price Range:</span> $5,000- $15,000+</p>
+                    </div>
+                </div>
+                <!-- 4th card  -->
+                <div class="flex flex-col justify-center items-center border-2 rounded-xl bg-white py-4 px-2">
+                    <div class="mb-4 border-2 lg:border-dashed lg:border-stone-400 w-326 h-180">
+                        <img src="my own side/luxary.jpg" alt="" class="w-full rounded-lg">
+                    </div>
+                    <div class="text-justify px-4 space-y-3">
+                        <h1 class="text-black font-extrabold text-lg md:text-xl lg:text-2xl">Luxury Package: </h1>
+                        <p class="font-medium text-[#737373] text-base">Target Audience: High-end clients looking for exclusive, luxury home designs.</p>
+                        <h3 class="text-black font-extrabold text-lg lg:text-xl">Features:</h3>
+                        <ul class="list-disc font-medium text-[#737373] text-base">
+                            <li>Bespoke architectural design services</li>
+                            <li>Exclusive access to high-end materials and finishes</li>
+                            <li>Full interior and exterior design with landscaping</li>
+                            <li>Virtual reality walkthroughs of the design</li>
+                            <li>Unlimited consultations and revisions</li>
+                            <li>Coordination with top-tier contractors and suppliers</li>
+                            <li>Project management support through the construction phase</li>
+                            <li>Post-construction consultation (e.g., interior decorating, furnishing)</li>
+                            <li>Smart home integration and technology consultation</li>
+                        </ul>
+                        <p class="font-medium text-[#737373] text-base"><span class="font-bold text-black">Price Range:</span> $15,000- $50,000+</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center mt-4 pt-4  px-5 bg-white gap-4 rounded-xl w-full md:w-2/3 lg:w-1/2 mx-auto">
+                <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Add-On Services:</h1>
+                <ul class="list-disc font-semibold text-black  text-base space-y-3">
+                    <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Interior Design Package: </span><br> Customized interior layouts, furniture selection, and decor.</li>
+                    <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Landscape Design Package:</span><br> Custom landscaping and outdoor space design.</li>
+                    <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Sustainability Consultation:</span><br> Advice on eco-friendly building practices and materials.</li>
+                    <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Home Renovation Design Package:</span><br> Designs for home extensions, renovations, or remodeling.</li>
+                    <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Project Management:</span><br> Ongoing management of the project through construction.</li>
+                </ul>
+            </div>
+        </div>
+        <!-- self section ends -->
     </main>
     <footer>
 
