--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col justify-center items-center mt-4 pt-4  px-5 bg-white gap-4 rounded-xl w-full md:w-2/3 lg:w-1/2 mx-auto">
+            <div class="flex flex-col justify-center items-center mt-4 py-12  px-5 bg-white gap-4 rounded-xl w-full md:w-2/3 lg:w-1/2 mx-auto">
                 <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Add-On Services:</h1>
                 <ul class="list-disc font-semibold text-black  text-base space-y-3">
                     <li><span class="text-black font-extrabold text-lg md:text-xl lg:text-2xl mb-2">Interior Design Package: </span><br> Customized interior layouts, furniture selection, and decor.</li>
