--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
             <!-- text section  -->
             <div class="text-center space-y-6 py-10 mb-10">
-                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#ABEF5F33] w-5 h-5 flex justify-center items-center"></i>Rinterio News</a>
+                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"><i class="fa-solid fa-arrow-right"></i> Rinterio News</a>
                 <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Read Our Articles and News</h1>
                 <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
             </div>
