done wih form part

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         </div>
         <!-- read our article and news ends  -->
         <!-- self section starts -->
-        <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
+        <div class="w-10/12 mx-auto flex flex-col gap-5 py-5 mb-10">
             <!-- text section  -->
             <div class="text-center space-y-6 py-10 mb-10">
                 <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"><i class="fa-solid fa-arrow-right"></i> Our Packages</a>
@@ -493,6 +493,31 @@
             </div>
         </div>
         <!-- self section ends -->
+        <!-- next project discussion starts -->
+        <div class="bg-[url('assets/bg.jpg')]">
+            <div class="w-10/12 mx-auto px-5 lg:px-14 my-12 lg:my-20 py-10 lg:py-20">
+                <!-- text part -->
+                <div class="mb-10">
+                    <div class="flex flex-col justify-between items-center text-center gap-4">
+                        <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"><i class="fa-solid fa-arrow-right"></i> Let’s Connect</a>
+                        <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Let’s Discuss Next Project</h1>
+                        <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                </div>
+                <!-- form part -->
+                <div class="flex flex-col px-6 lg:px-12 gap-5">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-5">
+                        <input type="text" placeholder="First Name" class="input w-full font-semibold text-xl rounded-full">
+                        <input type="text" placeholder="Last Name" class="input w-full font-semibold text-xl rounded-full">
+                        <input type="text" placeholder="Phone Number" class="input w-full font-semibold text-xl rounded-full">
+                        <input type="text" placeholder="Email Address" class="input w-full font-semibold text-xl rounded-full">
+                        <textarea placeholder="Write your message here." class="textarea w-full font-semibold text-xl rounded-lg h-[240px] p-5 resize-none md:col-span-2"></textarea>
+                    </div>
+                    <a class="btn bg-[#ABEF5F] text-black font-bold text-xl rounded-3xl">Send Mail <i class="fa-solid fa-arrow-right rounded-full text-white bg-black w-8 h-8 text-center -rotate-45 px-2 py-2"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- next project discussion ends -->
     </main>
     <footer>
 
