done with footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container bg-stone-200 w-10/12 mx-auto ">
+    <main class="bg-stone-200 w-10/12 mx-auto ">
         <!-- about us starts -->
         <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-6 py-32 relative">
             <!-- arrow  -->
@@ -519,8 +519,25 @@
         </div>
         <!-- next project discussion ends -->
     </main>
-    <footer>
-
+    <footer class="bg-black -mt-10">
+        <div class="flex flex-col justify-between items-center text-center py-[72px] lg:py-[100px] gap-5">
+            <div class="flex">
+                <a class="btn btn-ghost text-white font-extrabold text-xl"> <i class="fa-solid fa-arrow-right text-xl -rotate-45 flex justify-center items-center rounded-full bg-green-primary text-black w-9 h-9"></i> <span class="text-4xl pl-3">Rinterio</span></a>
+            </div>
+            <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
+            <div class="my-10">
+                <ul class="menu menu-horizontal px-1 grid grid-cols-1 md:grid-cols-5 gap-5 ">
+                    <li class="text-[#737373]"><a>Home</a></li>
+                    <li class="text-[#737373]"><a>Services</a></li>
+                    <li class="text-[#737373]"><a>Portfolio</a></li>
+                    <li class="text-[#737373]"><a>Blogs</a></li>
+                    <li class="text-[#737373]"><a>Contact us</a></li>
+                  </ul>
+            </div>
+            <div class="w-3/4 md:w-[212px] ">
+                <a class="btn bg-green-primary text-black font-extrabold rounded-full w-full"><span class="text-lg">Book Consult</span> <i class="fa-solid fa-arrow-right  -rotate-45 rounded-full bg-black text-white w-5 h-5 flex justify-center items-center"></i> </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
