done after the bugs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="https://kit.fontawesome.com/6ac8fc23da.js" crossorigin="anonymous"></script>
 </head>
 <body class="manrope ">
-    <header class="w-10/12 mx-auto bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] md:container">
+    <header class="w-10/12 mx-auto bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] ">
         <!-- navbar starts here -->
         <nav class="mx-auto md:px-10">
             <div class="navbar justify-between">
